# ansible-lint-custom-strict-naming-sample

./: Makefile  README.md  pyproject.toml  vscode.code-workspace
playbooks/: debug.yml
playbooks/roles/sample/tasks/: main.yml
playbooks/tasks/: sample.yml
